--- a/package.json
+++ b/package.json
@@ -9,35 +9,35 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@expo-google-fonts/dev": "^0.2.3",
-    "@expo/config": "^8.1.1",
-    "@expo/metro-config": "^0.10.0",
+    "@expo/metro-config": "~0.18.1",
     "@expo/vector-icons": "^14.0.0",
     "@gorhom/bottom-sheet": "^4.6.3",
     "@react-navigation/drawer": "^6.6.15",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.26",
     "@react-navigation/stack": "^6.3.29",
-    "@types/react-native-fs": "^2.13.0",
     "axios": "^1.7.2",
-    "expo": "~51.0.11",
-    "expo-camera": "~15.0.10",
+    "expo": "~51.0.17",
+    "expo-build-properties": "~0.12.3",
+    "expo-camera": "~15.0.12",
     "expo-checkbox": "~3.0.0",
+    "expo-dev-client": "~4.0.19",
+    "expo-face-detector": "~12.7.1",
     "expo-file-system": "~17.0.1",
     "expo-font": "~12.0.7",
-    "expo-image-picker": "~15.0.5",
+    "expo-image-picker": "~15.0.6",
     "expo-linear-gradient": "~13.0.2",
     "expo-location": "~17.0.1",
-    "expo-media-library": "~16.0.3",
+    "expo-media-library": "~16.0.4",
     "expo-sharing": "~12.0.1",
     "expo-status-bar": "~1.12.1",
     "expo-system-ui": "~3.0.6",
+    "expo-updates": "~0.25.18",
     "lottie-react-native": "6.7.0",
     "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-native": "0.74.2",
     "react-native-circle-checkbox": "^0.1.6",
-    "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "~2.16.1",
     "react-native-gifted-charts": "^1.4.10",
     "react-native-google-places-autocomplete": "^2.5.6",
@@ -45,15 +45,15 @@
     "react-native-reanimated": "~3.10.1",
     "react-native-responsive-screen": "^1.4.2",
     "react-native-rounded-checkbox": "^0.3.3",
+    "react-native-safe-area-context": "4.10.1",
     "react-native-svg": "15.2.0",
-    "reanimated-bottom-sheet": "^1.0.0-alpha.22",
-    "expo-updates": "~0.25.17"
+    "react-native-vision-camera": "^4.4.1",
+    "reanimated-bottom-sheet": "^1.0.0-alpha.22"
   },
   "devDependencies": {
     "@babel/core": "^7.24.0",
     "@babel/plugin-proposal-unicode-property-regex": "^7.18.6",
     "@types/react": "~18.2.79",
-    "@types/react-native": "^0.73.0",
     "tailwindcss": "^3.3.2",
     "typescript": "~5.3.3"
   },
