--- a/package.json
+++ b/package.json
@@ -37,7 +37,9 @@
     "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-native": "0.74.2",
+    "react-native-bouncy-checkbox": "^4.0.1",
     "react-native-circle-checkbox": "^0.1.6",
+    "react-native-element-dropdown": "^2.12.1",
     "react-native-gesture-handler": "~2.16.1",
     "react-native-gifted-charts": "^1.4.10",
     "react-native-google-places-autocomplete": "^2.5.6",
